# lightc

./: .gitignore  Cargo.toml  README.md  TODO.md  mm.lt  modules.md  run.sh  rustfmt.toml
core/: core.lt
crates/ast/: Cargo.toml
crates/codegen/: Cargo.toml
crates/codegen/src/: cg_symbol.rs  codegen_symbol.rs  jit_externs.rs  lib.rs  macros.rs  ops.rs  tests.rs
crates/codegen/src/tests/snapshots/: array_basic.snap  array_basic.snap.new  block_basic.snap  block_basic.snap.new  cond_cond_fail.snap  cond_cond_success.snap  cond_false_lit.snap  cond_false_lit.snap.new  cond_if_else_cond_fail.snap  cond_if_else_cond_fail.snap.new  cond_if_else_cond_success.snap  cond_if_else_if_cond_2_success.snap  cond_if_else_if_cond_2_success.snap.new  cond_if_else_if_cond_success.snap  cond_if_else_if_else_cond_2_success.snap  cond_if_else_if_else_cond_2_success.snap.new  cond_if_else_if_else_cond_success.snap  cond_if_else_if_else_conds_fail.snap  cond_if_else_if_else_conds_fail.snap.new  cond_true_lit.snap  for_basic.snap  for_basic.snap.new  let_basic.snap  let_bool.snap  let_float_default.snap  loop_basic.snap  loop_both.snap  loop_cond_break.snap  loop_end_break.snap  loop_if_breaks.snap  loop_if_expr.snap  loop_nested_breaks.snap  loop_nested_next.snap  loop_next.snap  loop_with_for.snap  order_a.snap  order_b.snap  scope_basic_shadowing.snap  scope_for.snap  scope_if.snap  (+7 more)
crates/common/: Cargo.toml
crates/hir/: Cargo.toml
crates/hir/src/: lib.rs  node.rs  tests.rs
crates/hir/src/tests/snapshots/: binop_all.snap  binop_all_ops.snap  binop_inner.snap  call_undef_func.snap  func_call_def_first.snap  func_call_def_second.snap  func_call_mix1.snap  func_call_mix2.snap  func_call_mix3.snap  func_call_recursive.snap  func_redefine_fn.snap  ident_unknown_var.snap  init_literal_all.snap  main_ty_antn.snap  main_ty_void.snap  redefined_fn_basic.snap  scope_basic_shadowing.snap  scope_delete_scope.snap  scope_for_scope.snap  scope_if_scope.snap  scope_nested_shadowing.snap
crates/lex/: Cargo.toml
crates/lexer/: Cargo.toml
crates/lightc/: Cargo.toml
crates/lightc/src/: jit_externs.rs  main.rs  module.rs
crates/lightc/tests/: cmd.rs
crates/lower/: Cargo.toml
crates/lower/src/: lib.rs  macros.rs  tests.rs
crates/lower/src/hir/: mod.rs  node.rs
crates/lower/src/tests/snapshots/: binop_all_ops.snap  binop_inner.snap  dead_code_break.snap  dead_code_next.snap  func_call_def_first.snap  func_call_def_second.snap  func_call_mix1.snap  func_call_mix2.snap  func_call_mix3.snap  func_call_recursive.snap  init_literal_all.snap  init_literal_basic.snap  init_literal_nested_struct.snap  init_literal_selector.snap  init_literal_struct.snap  loop_dead_code_break.snap  struct_selector.snap  struct_self.snap  while_basic.snap
crates/parse/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: errors.rs  lib.rs  macros.rs  parsed_node.rs  precedence.rs  tests.rs
crates/parser/src/ast/: mod.rs  prototype.rs  stmt.rs
crates/parser/src/ast/expr/: literal.rs  mod.rs
crates/parser/src/tests/snapshots/: array_empty_lit.snap  array_index_1.snap  array_index_2.snap  array_index_3.snap  array_index_bad_1.snap  array_index_bad_2.snap  array_index_bad_3.snap  array_lit.snap  array_type.snap  array_type_bad_1.snap  array_type_bad_2.snap  array_type_bad_3.snap  array_type_bad_4.snap  array_type_bad_5.snap  assignment_basic.snap  binop_bad_1.snap  binop_bad_2.snap  binop_bad_3.snap  binop_bad_4.snap  binop_basic.snap  binop_basic_var.snap  binop_empty_paren.snap  binop_invalid_op.snap  binop_multi.snap  binop_single.snap  binop_with_unop.snap  block_bad.snap  block_basic.snap  block_empty.snap  block_let.snap  block_missing.snap  block_multi.snap  call_bad_1.snap  call_bad_2.snap  call_bad_3.snap  call_bad_4.snap  call_basic.snap  call_nested.snap  call_nullary.snap  call_with_expr.snap  (+74 more)
crates/symbol_table/: Cargo.toml
crates/tych/: Cargo.toml
crates/type_checker/: Cargo.toml
examples/: mandelbrot.lt  mm.lt
grammar/: grammar.md  light.ebnf  light.g4  test-grammar.sh  test-input.lt  test-output
lex/src/: main.rs
misc/: light-mode.el  modules.md
samples/: fibonacci.lt  fnv1a.lt  loop.lt  mandelbrot.lt  mm.lt
scripts/: build_core.sh  run.sh
src/: ast.rs  codegen.rs  ir_generator.rs  jit_externs.rs  lexer.rs  lib.rs  main.rs  parser.rs  symbol_table.rs  token.rs  type_checker.rs
src/ast/: as_expr.rs  conversion.rs  display.rs  mod.rs
src/codegen/: convert.rs  macros.rs  mod.rs  ops.rs
src/lexer/: mod.rs
src/parser/: errors.rs  macros.rs  mod.rs  precedence.rs
src/type_checker/: macros.rs  mod.rs  symbol_table.rs
stdlib/: stdlib.lt
tests/: ir_gen.rs  ir_generator.rs  lexer.rs  parser.rs
tests/inputs/: cond.input  for.input  num_err.input  ops.input  trailing_comment.input  (+1 more)
(+703 files in other folders)
