[package]
name = "codegen"
version = "0.0.0"
edition = "2021"

[dependencies]
ast = { path = "../ast" }
common = { path = "../common" }

either = "1.6.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
llvm-sys = "140"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
type_checker = { path = "../type_checker" }

insta = { version = "1.12.0", features = ["glob"] }
