[package]
name = "codegen"
version = "0.0.0"
edition = "2021"

[dependencies]
either = "1.6.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
llvm-sys = "140"
serde = { version = "1.0.136", features = ["derive"] }

ast = { path = "../ast" }
common = { path = "../common" }
symbol_table = { path = "../symbol_table" }

[dev-dependencies]
insta = { version = "1.12.0", features = ["glob"] }

hir = { path = "../hir" }
parser = { path = "../parser" }
lexer = { path = "../lexer" }
type_checker = { path = "../type_checker" }
