[package]
name = "codegen"
version = "0.0.0"
edition = "2021"

[dependencies]
either = "1.6.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
llvm-sys = "140"
serde = { version = "1.0.136", features = ["derive"] }

common = { path = "../common" }
lower = { path = "../lower" }

[dev-dependencies]
insta = { version = "1.12.0", features = ["glob"] }

parse = { path = "../parse" }
lex = { path = "../lex" }
tych = { path = "../tych" }
