[package]
name = "hir"
version = "0.0.0"
edition = "2021"

[dependencies]
ast = { path = "../ast" }
common = { path = "../common" }

serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }

insta = { version = "1.12.0", features = ["glob"] }
