[package]
name = "lightc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
tempfile = "3.3.0"

codegen = { path = "../codegen" }
common = { path = "../common" }
lower = { path = "../lower" }
lex = { path = "../lex" }
parse = { path = "../parse" }
tych = { path = "../tych" }
