[package]
name = "lightc"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "3.0.14", features = ["derive"] }

codegen = { path = "../codegen" }
common = { path = "../common" }
lower = { path = "../lower" }
lex = { path = "../lex" }
parse = { path = "../parse" }
tych = { path = "../tych" }

[dev-dependencies]
assert_cmd = "2.0.7"
assert_fs = "1.0.10"
predicates = "2.1.4"
serial_test = "0.10.0"
