[package]
name = "lower"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }

common = { path = "../common" }
parse = { path = "../parse" }

[dev-dependencies]
insta = { version = "1.12.0", features = ["glob"] }

lex = { path = "../lex" }
tych = { path = "../tych" }
