[package]
name = "parser"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }

common = { path = "../common" }
lexer = { path = "../lexer" }
symbol_table = { path = "../symbol_table" }

[dev-dependencies]
insta = { version = "1.12.0", features = ["glob"] }
